--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@ ul {
                 <div class="info">
                     <p class="nome">5 convidados</p>
                     <p class="ingredientes">Conjunto simples com um bolo mais doces.</p>
-                    <p class="preco">R$ 85,00 KG</p>
+                    <p class="preco">R$ 150,00</p>
                 </div>
             </section>
 
@@ -450,7 +450,7 @@ ul {
                 <div class="info">
                     <p class="nome">10 convidados</p>
                     <p class="ingredientes">Inclui um bolo, variedade de doces e salgados, adicional de palha italiana.</p>
-                    <p class="preco">R$ 120,00 KG</p>
+                    <p class="preco">R$ 180,00</p>
                 </div>
             </section>
 
@@ -459,7 +459,7 @@ ul {
                 <div class="info">
                     <p class="nome">25 convidados</p>
                     <p class="ingredientes">Bolo mais salgados e docinhos variados.</p>
-                    <p class="preco">R$ 150,00 KG</p>
+                    <p class="preco">R$ 250,00</p>
                 </div>
             </section>
             <section class="produtos">
@@ -467,7 +467,7 @@ ul {
               <div class="info">
                   <p class="nome">35+ convidados</p>
                   <p class="ingredientes">Conjunto completo, incluindo bolo, refrigerantes, salgados e doces.</p>
-                  <p class="preco">R$ 200,00 KG</p>
+                  <p class="preco">R$ 300,00+</p>
               </div>
           </section>
         </section>
